--- a/Dockerfiletest
+++ b/Dockerfiletest
@@ -20,6 +20,6 @@ EXPOSE 8080
 CMD ["npm" ,"start"]
 
 # test if works
-# sudo docker build -t vinicius77sub/webworker-test .
+# sudo docker build -t vinicius77sub/webworker-test ./Dockerfiletest
 # sudo docker run -p 5000:8000 vinicius77sub/webworker-test
 # http://172.17.0.2:3000/
