fix(package-json): add core scripts for standard release, include workaround for SSL legagy packages

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "release:patch": "standard-version --release-as patch && git add ."
+    "release:patch": "standard-version --release-as patch && git add .",
+    "release:minor": "standard-version --release-as minor && git add .",
+    "release:major": "standard-version --release-as major && git add ."
   },
   "standard-version": {
     "scripts": {
