--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
     "eslint": "^8.38.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.0",
-    "standard-version": "^9.5.0"
+    "prettier": "^2.8.7",
+    "standard-version": "^9.5.0",
+    "vite": "^4.3.0"
   }
 }
