--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
     "eslint": "^8.38.0",
@@ -50,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "^2.8.7",
     "standard-version": "^9.5.0",
+    "typescript": "^5.0.4",
     "vite": "^4.3.0"
   }
 }
